[package]
name = "nest-api-rust"
version = "0.1.0"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.7.1"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
juniper = "0.14.2"
tokio-postgres = { version = "0.5.4", features = ["with-chrono-0_4"] }
tokio = "0.2.21"
postgres_array = "0.10.0"
chrono = "0.4.11"
uuid = { version = "0.8.1",  features = ["v4"] }
actix-cors = "0.2.0"
dotenv = "0.15.0"
reqwest = { version = "0.10.6", features = ["json"] }
tar = "0.4.29"
actix-multipart = "0.2.0"
sanitize-filename = "0.2"
futures = "0.3.1"
flate2 = "1.0.16"
